--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -149,7 +149,7 @@
                                     <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력" required>
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="form-control mb-30" name="content" placeholder="내용 입력" required></textarea>
+                                    <textarea class="form-control mb-30" name="content" placeholder="내용 입력"></textarea>
                                 </div>
                                 <div class="col-12">
                                     <input type="file" name="mediafile" accept="image/*, video/*" required>
