--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -142,9 +142,11 @@
                             <button class="btn" data-filter=".performance">공연</button>
                             <button class="btn" data-filter=".etc">기타</button>
                         </div>
-                        <button class="btn">
-                            <a href="{% url 'posts:new' %}">업로드</a>
-                        </button>
+
+                        <div class="col-12 text-left wow fadeInUp" data-wow-delay="800ms">
+                            <a href="{% url 'posts:new' %}" class="btn alime-btn btn-2 mt-15">Upload</a>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
