--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -3,11 +3,22 @@
         <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 {{category_value}} wow fadeInUp" data-wow-delay="100ms">
             <div class="single-portfolio-content">
                 {% if post.mediafile %}
-                    <img src ="{{post.mediafile.url}}" alt="">
-                    <div class="hover-content">
-                        <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
-                    </div>
+                    {% if "mp4" in post.mediafile.name %}
+                        <video class="col-12">
+                            <source src="{{post.mediafile.url}}" alt="video">
+                        </video>
+                        <div class="hover-content">
+                            <a href="{{post.mediafile.url}}" class=".video-play-btn">+</a>
+                        </div>
+                    {% else %}
+                        <img src ="{{post.mediafile.url}}" alt="">
+                        <div class="hover-content">
+                            <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
+                        </div>
+                    {% endif %}
+                    
                 {% endif %}
+
                 {% if post.title %}
                     <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
                 {% endif %}
