파일용량제한

--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -152,7 +152,7 @@
                                     <textarea class="form-control mb-30" name="content" placeholder="내용 입력"></textarea>
                                 </div>
                                 <div class="col-12">
-                                    <input type="file" name="mediafile" accept="image/*, video/*" required>
+                                    <input type="file" name="mediafile" onchange="limitSize(this)" accept="image/*, video/*" required>
                                 </div>
                                 <div class="col-12">
                                     <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
@@ -287,6 +287,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="{% static 'js/alime.bundle.js'%}"></script>
     <!-- Active -->
     <script src="{% static 'js/default-assets/active.js'%}"></script>
+
+    <script src="{% static 'js/filesizelimit.js' %}"></script>
+
 
 </body>
 
