main sub img 삽입

--- a/dgufest/templates/dgufest/index.html
+++ b/dgufest/templates/dgufest/index.html
@@ -130,7 +130,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- Single Slide -->
             <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(static/img/main-slide-img/main2.jpg);">
                 <div class="container h-100">
@@ -192,28 +191,13 @@
     <!-- Gallery Area Start -->
     <div class="alime-portfolio-area section-padding-80 clearfix">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <!-- Projects Menu -->
-                    <div class="alime-projects-menu">
-                        <div class="portfolio-menu text-center">
-                            <button class="btn active" data-filter="*">All</button>
-                            <button class="btn" data-filter=".human">Human</button>
-                            <button class="btn" data-filter=".nature">Nature</button>
-                            <button class="btn" data-filter=".country">Country</button>
-                            <button class="btn" data-filter=".video">Video</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <div class="row alime-portfolio">
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub1.jpg' %}" alt="">
                         <div class="hover-content">
-                            <a href="{% static 'img/bg-img/3.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub1.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -221,9 +205,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/4.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub2.jpg' %}" alt="">
                         <div class="hover-content">
-                            <a href="{% static 'img/bg-img/4.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub2.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -231,9 +215,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub3.jpg' %}" alt="">
                         <div class="hover-content">
-                            <a href="{% static 'img/bg-img/3.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub3.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -241,19 +225,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub4.jpg' %}" alt="">
                         <div class="hover-content">
-                            <a href="{% static 'img/bg-img/3.jpg' %}" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
-                    <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
-                        <div class="hover-content">
-                            <a href="{% static 'img/bg-img/3.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub4.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -261,9 +235,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/3.jpg' %}g" alt="">
+                        <img src="{% static 'img/main-sub-img/sub6.jpg' %}" alt="">
                         <div class="hover-content">
-                            <a href="{% static 'img/bg-img/3.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub6.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -271,9 +245,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub7.jpg' %}" alt="">
                         <div class="hover-content">
-                            <a href="{% static 'img/bg-img/3.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub7.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -281,9 +255,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub8.jpg' %}" alt="">
                         <div class="hover-content">
-                            <a href="{% static 'img/bg-img/3.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub8.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -291,9 +265,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-6 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub9.jpg' %}" alt="">
                         <div class="hover-content">
-                            <a href="{% static 'img/bg-img/3.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub9.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -301,9 +275,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub10.jpg' %}" alt="">
                         <div class="hover-content">
-                            <a href="{% static 'img/bg-img/3.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub10.jpg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -311,17 +285,21 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                        <img src="{% static 'img/main-sub-img/sub11.jpeg' %}" alt="">
                         <div class="hover-content">
-                            <a href="{% static 'img/bg-img/3.jpg' %}" class="portfolio-img">+</a>
+                            <a href="{% static 'img/main-sub-img/sub11.jpeg' %}" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                    <a href="#" class="btn alime-btn btn-2 mt-15">View More</a>
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="{% static 'img/main-sub-img/sub5.jpg' %}" alt="">
+                        <div class="hover-content">
+                            <a href="{% static 'img/main-sub-img/sub5.jpg' %}" class="portfolio-img">+</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
