instagram feed 이미지 변경, url 연결

--- a/dgufest/templates/dgufest/index.html
+++ b/dgufest/templates/dgufest/index.html
@@ -313,71 +313,41 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <h2>Follow Instagram</h2>
-                        <p>@Alime_photographer</p>
+                        <p>@likelion_dongguk</p>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- Instagram Feed Area -->
-        <div class="instragram-feed-area owl-carousel">
+        <div class="instragram-feed-area owl-carousel items-3 ">
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                <img src="{% static 'img/core-img/dgulion.png' %}" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/likelion_dongguk/?hl=ko">
                         <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
+                        <span>동국대학교 멋쟁이사자처럼 인스타그램</span>
                     </a>
                 </div>
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                <img src="{% static 'img/core-img/dgulion.png' %}" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
+                    <a href="https://ko-kr.facebook.com/DGUlion/">
+                        <i class="ti-facebook" aria-hidden="true"></i>
+                        <span>동국대학교 멋쟁이사자처럼 페이스북</span>
                     </a>
                 </div>
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
+                <img src="{% static 'img/core-img/dgulion.png' %}" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div>
-            </div>
-            <!-- Single Instagram Item -->
-            <div class="single-instagram-item">
-                <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div>
-            </div>
-            <!-- Single Instagram Item -->
-            <div class="single-instagram-item">
-                <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div>
-            </div>
-            <!-- Single Instagram Item -->
-            <div class="single-instagram-item">
-                <img src="{% static 'img/bg-img/3.jpg' %}" alt="">
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
+                    <a href="https://pf.kakao.com/_jxbIxfd">
+                        <i class="ti-" aria-hidden="true"></i>
+                        <span>동국대학교 멋쟁이사자처럼 카카오톡</span>
                     </a>
                 </div>
             </div>
