--- a/dgufest/templates/dgufest/index.html
+++ b/dgufest/templates/dgufest/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Title -->
-    <title>멋쟁이사자처럼과 HI-SW봉사단이 함께하는 웹 기반 전자 액자 경진 대회</title>
+    <title>동국대 전자 액자 경진 대회</title>
 
     <!-- Favicon -->
     <link rel="icon" href="{% static 'img/core-img/favicon.png' %}">
