--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -3,7 +3,7 @@
         <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 {{category_value}} wow fadeInUp" data-wow-delay="100ms">
             <div class="single-portfolio-content">
                 {% if post.mediafile %}
-                    {% if "mp4" in post.mediafile.name %}
+                    {% if "video" in post.mediafile.content_type %}
                         <video class="col-12">
                             <source src="{{post.mediafile.url}}" alt="video">
                         </video>
