--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -144,6 +144,14 @@
                                         <option value="etc">기타</option>
                                     </select>
                                 </div>
+                                <div class="form-group">
+                                    <label>사진 vs 영상</label>
+                                    <select name="mediatype" id="mediatype">
+                                        <option value="image">사진</option>
+                                        <option value="video">영상</option>
+                                    </select>
+                                </div>
+                        
                             </div>
                                 <div class="col-12">
                                     <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력" required>
