사진영상select의 label이름 수정

--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -145,7 +145,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group">
-                                    <label>사진 vs 영상</label>
+                                    <label>파일 종류</label>
                                     <select name="mediatype" id="mediatype">
                                         <option value="image">사진</option>
                                         <option value="video">영상</option>
