image, video 파일타입 구분

--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -2,7 +2,7 @@
     {% if post.category == category_value %}
         <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 {{category_value}} wow fadeInUp" data-wow-delay="100ms">
             <div class="single-portfolio-content">
-                {% if post.mediatype == "video" %}
+                {% if "video" in post.mediatype %}
                     <video class="col-12" controls>
                         <source src="{{post.mediafile.url}}" alt="video">
                     </video>
