--- a/dgufest/templates/dgufest/index.html
+++ b/dgufest/templates/dgufest/index.html
@@ -243,6 +243,16 @@
                 </div>
 
                 <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="{% static 'img/main-sub-img/sub12.jpg' %}" alt="">
+                        <div class="hover-content">
+                            <a href="{% static 'img/main-sub-img/sub12.jpg' %}" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="{% static 'img/main-sub-img/sub10.jpg' %}" alt="">
@@ -271,6 +281,8 @@
                         </div>
                     </div>
                 </div>
+
+            
             </div>
         </div>
     </div>
