base.html 위치 변경, about.html 추가

--- a/dgufest/templates/index.html
+++ b/dgufest/templates/index.html
@@ -1,7 +1,7 @@
-{% extends 'dgufest/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
-{% block content %}
 
+{% block content %}
     <!-- Welcome Area Start -->
     <section class="welcome-area">
         <div class="welcome-slides owl-carousel">
