--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -1,6 +1,29 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<style>
+    table.type04 {
+    border-collapse: separate;
+    border-spacing: 1px;
+    text-align: left;
+    line-height: 1.5;
+    border-top: 1px solid #ccc;
+  margin : 20px 10px;
+}
+table.type04 th {
+    width: 300px;
+    padding: 10px;
+    font-weight: bold;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+}
+table.type04 td {
+    width: 350px;
+    padding: 10px;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+}
+</style>
     <!-- Breadcrumb Area Start -->
     <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/38.jpg);">
         <div class="container h-100">
@@ -10,7 +33,7 @@
                         <h2 class="page-title">About</h2>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> Home</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="icon_house_alt"></i> Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">About</li>
                             </ol>
                         </nav>
@@ -27,19 +50,23 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="about-us-content mb-80">
-                        <h3 class="wow fadeInUp" data-wow-delay="100ms">멋쟁이사자처럼과 HI-SW봉사단이 함께하는 웹 기반 전자 액자 경진 대회</h3>
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">멋쟁이사자처럼과<br>HI-SW 봉사단이 함께하는 <br>웹 기반 전자 액자 경진 대회</h3>
                         <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">서비스 개발 목적~~~</p>
-                        <p class="wow fadeInUp" data-wow-delay="400ms">우리 서비스는 이렇게 이용하세요~~</p>
-                        <a class="btn alime-btn btn-2 mt-30 wow fadeInUp" data-wow-delay="500ms" href="#">참여하러 가기</a>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">
+                            2020년 현재, 코로나19로 인해 대학의 꽃인 축제가 열리지 못해 많은 학생들이 아쉬움을 남기고 있습니다.
+                            이에 재학생들은 이전에 즐겼던 축제를 추억해보고, 신입생들은 간접적으로나마 축제를 경험해볼 수 있는 기회를 제공하고자
+                            동국대학교 멋쟁이사자처럼 8기가 모여 사진과 영상으로 만나는 축제, 웹 기반 전자 액자 경진 대회 사이트를 제작하였습니다.
+                        </p>
+                        <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
+                        <p class="wow fadeInUp" data-wow-delay="400ms">
+                            회원가입을 완료한 재학생들은 갤러리에서 부스/주점/공연/기타 4가지의 카테고리에 축제 사진과 영상을 업로드하고, 투표할 수 있습니다.
+                            본인이 촬영한 2019년도 이하의 사진과 영상이 아닐 경우 수상에 제외될 수 있습니다.
+                        </p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="about-video-area mb-80 wow fadeInUp" data-wow-delay="100ms">
-                        <img src="img/bg-img/17.jpg" alt="">
-                        <div class="video-icon">
-                            <a href="https://www.youtube.com/watch?v=sSakBz_eYzQ" class="video-play-btn"><i class="arrow_triangle-right"></i></a>
-                        </div>
+                        <img src="{%static 'img/core-img/dgulion.png' %}" alt="임시이미지">
                     </div>
                 </div>
             </div>
@@ -53,7 +80,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h2>투표 방식과 상품 안내</h2>
+                        <h2>투표 및 상품</h2>
                     </div>
                 </div>
             </div>
@@ -66,7 +93,20 @@
                             <i class="fa fa-film" aria-hidden="true"></i>
                         </div>
                         <h4>일정 안내</h4>
-                        <p>우리 일정 표로 표현하면 될듯 이미지나 table</p>
+                        <table class="type04">
+                            <tr>
+                                <th scope="row">사이트 공개</th>
+                                <td>10월 5일</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">투표 기간</th>
+                                <td>11월 1일 자정까지</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">수상작 발표</th>
+                                <td>11월 2일 (예정)</td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
 
@@ -77,7 +117,17 @@
                             <i class="fa fa-pencil" aria-hidden="true"></i>
                         </div>
                         <h4>투표 안내</h4>
-                        <p>투표 어떻게 진행되고, 뭐 좋아요 눌러도 개수 안보이고 어쩌고</p>
+                        <p>
+                            투표는 게시물 좋아요 버튼을 통해 여러 작품에 행사할 수 있습니다.
+                            투표 기간 동안 투표 수는 작성자에게만 공개되며
+                            수상작 발표 이후 모든 작품의 투표 수는 공개될 예정입니다.
+                        </p>
+                        <p>
+                            수상작은 투표 수에 따라 결정되며 선정된 재학생에게는 상금 지급과 함께 메인 페이지에 작품이 전시됩니다.
+                        </p>
+                        <p>
+                            사진과 영상을 업로드할 수 없는 신입생에게는 추첨을 통해 투표를 행사한 30명에게 소정의 기프티콘을 지급할 예정입니다.
+                        </p>
                     </div>
                 </div>
 
@@ -88,7 +138,28 @@
                             <i class="fa fa-camera" aria-hidden="true"></i>
                         </div>
                         <h4>상품 안내</h4>
-                        <p>이것도 이미지나 table로 표현</p>
+                        <table class="type04">
+                            <tr>
+                                <th scope="row">대상 1명</th>
+                                <td> 300,000원</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">최우수상 1명</th>
+                                <td >200,000원</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">우수상 1명</th>
+                                <td >100,000원</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">장려상 8명 (부문별 2명)</th>
+                                <td> 50,000원</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">신입생 30명</th>
+                                <td> 스타벅스 1만원권</td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
@@ -102,77 +173,31 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h2>사이트 개발 및 지원</h2>
+                        <h2>개발 및 지원</h2>
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <!-- Team Member Area -->
-                <div class="col-md-6 col-xl-3">
+                <div class="col-md-6 col-xl-12">
                     <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="100ms">
-                        <div class="member-thumb">
-                            <img src="img/bg-img/19.jpg" alt="">
-                        </div>
-                        <h5>Andrew Dean</h5>
-                        <span>Photographer</span>
-                        <div class="member-social-info">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-linkedin"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                        </div>
+                        <h5>강동희 | 김태연 | 이소정 | 이예은 | 이형석 | 임도연 | 주현이 | 최현지</h5>
+                        <span>개발 | 동국대학교 멋쟁이사자처럼 8기</span>
                     </div>
                 </div>
-
-                <!-- Team Member Area -->
-                <div class="col-md-6 col-xl-3">
-                    <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="member-thumb">
-                            <img src="img/bg-img/20.jpg" alt="">
-                        </div>
-                        <h5>Tommy Kim</h5>
-                        <span>Photographer</span>
-                        <div class="member-social-info">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-linkedin"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                        </div>
+                <!-- Mentor Member Area -->
+                <div class="col-md-6 col-xl-12">
+                    <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="100ms">
+                        <h5>김연진 | 박현준 | 양준혁 | 연제훈 | 이주영</h5>
+                        <span>멘토 | 동국대학교 멋쟁이사자처럼 운영진</span>
                     </div>
                 </div>
-
-                <!-- Team Member Area -->
-                <div class="col-md-6 col-xl-3">
-                    <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="500ms">
-                        <div class="member-thumb">
-                            <img src="img/bg-img/21.jpg" alt="">
-                        </div>
-                        <h5>Max McCormick</h5>
-                        <span>Photographer</span>
-                        <div class="member-social-info">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-linkedin"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Team Member Area -->
-                <div class="col-md-6 col-xl-3">
-                    <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="700ms">
-                        <div class="member-thumb">
-                            <img src="img/bg-img/22.jpg" alt="">
-                        </div>
-                        <h5>Robert Ward</h5>
-                        <span>Photographer</span>
-                        <div class="member-social-info">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-linkedin"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                        </div>
+                <!-- Support Member Area -->
+                <div class="col-md-6 col-xl-12">
+                    <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="100ms">
+                        <h5>동국대학교 융합소프트웨어교육원 | 동국대학교 제50회 총학생회 하이라이트</h5>
+                        <span>지원 | 상금 및 상품 지원</span>
                     </div>
                 </div>
             </div>
