--- a/dgufest/templates/shared/navbar.html
+++ b/dgufest/templates/shared/navbar.html
@@ -1,7 +1,7 @@
 <!-- Nav Start -->
 <div class="classynav">
     <ul id="nav">
-        <li class="active"><a href="{% url 'index' %}">Home</a></li>
+        <li><a href="{% url 'index' %}">Home</a></li>
         <li><a href="#">Pages</a>
             <ul class="dropdown">
                 <li><a href="./">- Home</a></li>
@@ -21,7 +21,7 @@
             </ul>
         </li>
         <li><a href="{% url 'about' %}">About</a></li>
-        <li><a href=".{% url 'posts:gallery' %}">Gallery</a></li>
+        <li><a href="{% url 'posts:gallery' %}">Gallery</a></li>
         <li><a href="./blog.html">Blog</a></li>
         <li><a href="./contact.html">Contact</a></li>
     </ul>
