about 텍스트 수정

--- a/dgufest/templates/about.html
+++ b/dgufest/templates/about.html
@@ -53,14 +53,14 @@ table.type04 td {
                         <h3 class="wow fadeInUp" data-wow-delay="100ms">멋쟁이사자처럼과<br>HI-SW 봉사단이 함께하는 <br>웹 기반 전자 액자 경진 대회</h3>
                         <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
                         <p class="wow fadeInUp" data-wow-delay="300ms">
-                            2020년 현재, 코로나19로 인해 대학의 꽃인 축제가 열리지 못해 많은 학생들이 아쉬움을 남기고 있습니다.
+                            2020년 현재, 코로나19로 인해 대학의 꽃인 축제가 열리지 못해 많은 학생들이 아쉬움을 나타내고 있습니다.
                             이에 재학생들은 이전에 즐겼던 축제를 추억해보고, 신입생들은 간접적으로나마 축제를 경험해볼 수 있는 기회를 제공하고자
                             동국대학교 멋쟁이사자처럼 8기가 모여 사진과 영상으로 만나는 축제, 웹 기반 전자 액자 경진 대회 사이트를 제작하였습니다.
                         </p>
                         <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
                         <p class="wow fadeInUp" data-wow-delay="400ms">
-                            회원가입을 완료한 재학생들은 갤러리에서 부스/주점/공연/기타 4가지의 카테고리에 축제 사진과 영상을 업로드하고, 투표할 수 있습니다.
-                            본인이 촬영한 2019년도 이하의 사진과 영상이 아닐 경우 수상에 제외될 수 있습니다.
+                            저작권을 위반하거나 본인이 촬영하지 않은 사진과 영상을 업로드 할 경우 수상 대상에서 제외될 수 있습니다.
+                            동국대학교 축제 사진이나 영상이 아닌 경우에도 수상 대상에서 제외됩니다.
                         </p>
                     </div>
                 </div>
@@ -95,10 +95,6 @@ table.type04 td {
                         <h4>일정 안내</h4>
                         <table class="type04">
                             <tr>
-                                <th scope="row">사이트 공개</th>
-                                <td>10월 5일</td>
-                            </tr>
-                            <tr>
                                 <th scope="row">투표 기간</th>
                                 <td>11월 1일 자정까지</td>
                             </tr>
@@ -120,13 +116,13 @@ table.type04 td {
                         <p>
                             투표는 게시물 좋아요 버튼을 통해 여러 작품에 행사할 수 있습니다.
                             투표 기간 동안 투표 수는 작성자에게만 공개되며
-                            수상작 발표 이후 모든 작품의 투표 수는 공개될 예정입니다.
+                            수상작 발표 이후 모든 작품의 득표수가 공개될 예정입니다.
                         </p>
                         <p>
-                            수상작은 투표 수에 따라 결정되며 선정된 재학생에게는 상금 지급과 함께 메인 페이지에 작품이 전시됩니다.
+                            수상작은 좋아요 수에 따라 결정되며, 수상자로 선정된 재학생분들에게는 상금 지급과 함께 메인에 작품이 전시될 수 있는 기회를 드립니다.
                         </p>
                         <p>
-                            사진과 영상을 업로드할 수 없는 신입생에게는 추첨을 통해 투표를 행사한 30명에게 소정의 기프티콘을 지급할 예정입니다.
+                            신입생분들은 축제 사진과 영상을 업로드할 수 없다는 점을 고려하여 투표를 행사한 30명을 추첨하여 소정의 기프티콘을 드릴 예정입니다.
                         </p>
                     </div>
                 </div>
@@ -141,23 +137,23 @@ table.type04 td {
                         <table class="type04">
                             <tr>
                                 <th scope="row">대상 1명</th>
-                                <td> 300,000원</td>
+                                <td>300,000원</td>
                             </tr>
                             <tr>
                                 <th scope="row">최우수상 1명</th>
-                                <td >200,000원</td>
+                                <td>200,000원</td>
                             </tr>
                             <tr>
                                 <th scope="row">우수상 1명</th>
-                                <td >100,000원</td>
+                                <td>100,000원</td>
                             </tr>
                             <tr>
                                 <th scope="row">장려상 8명 (부문별 2명)</th>
-                                <td> 50,000원</td>
+                                <td>50,000원</td>
                             </tr>
                             <tr>
                                 <th scope="row">신입생 30명</th>
-                                <td> 스타벅스 1만원권</td>
+                                <td>스타벅스 1만원권</td>
                             </tr>
                         </table>
                     </div>
@@ -196,7 +192,7 @@ table.type04 td {
                 <!-- Support Member Area -->
                 <div class="col-md-6 col-xl-12">
                     <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="100ms">
-                        <h5>동국대학교 융합소프트웨어교육원 | 동국대학교 제50회 총학생회 하이라이트</h5>
+                        <h5>동국대학교 융합교육원 | 동국대학교 제50대 총학생회 하이라이트</h5>
                         <span>지원 | 상금 및 상품 지원</span>
                     </div>
                 </div>
